@@ -1,6 +1,10 @@
 $Id$
 
 1.1.0: (CVS)
+	- rearranged modem init so that failed modems will be skipped
+	  (thanks to Peter Smith for pointing that out).
+	- adding timing arguments to command completion. (recommended
+	  by Russell Adams)
 
 1.0.0: (2005-02-23)
 	- changed how email2page handles the header regex list.  This
